--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,6 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.caching=true
 org.gradle.configuration-cache=true
 
 #read more on this at https://github.com/neoforged/NeoGradle/blob/NG_7.0/README.md#apply-parchment-mappings
@@ -32,7 +30,7 @@ mod_name=Teas Official Random Things
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GPLv3
 # The mod version. See https://semver.org/
-mod_version=0.0.1 - Early Access Version
+mod_version=0.0.2
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
